--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,21 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = [
-    "dotenv>=0.9.9",
-    "nmapthon2>=0.1.5",
-    "ping3>=5.1.5",
+authors = [
+	{ name = "Sebastian Alighieri", email = "sebastian.alighierir@uanl.edu.mx" },
 ]
+dependencies = [
+	"builtwith>=1.3.4",
+	"dotenv>=0.9.9",
+	"ipwhois>=1.3.0",
+	"nmapthon2>=0.1.5",
+	"ping3>=5.1.5",
+	"shodan>=1.31.0",
+]
+
+[build-system]
+requires = ["uv_build>=0.9.7,<0.10.0"]
+build-backend = "uv_build"
+
+[tool.uv.workspace]
+members = ["T3_OSINT"]
